# jsy_covid_proxy

./: .gitignore  Pipfile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt
scripts/: fetch.py  models.py
templates/: index.html  test.html
