[tool.poetry]
name = "jsy_covid_proxy"
version = "0.1.0"
description = "Jersey COVID Data proxy from gov.je"
authors = ["DWE"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-Limiter = "^1.4"
requests = "^2.25.1"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
